swen430as1/tests/valid/trycatch/TryCatch_Valid_09.while
type Exception is { int code }

void main() {
    try {
	int x = 1 / 0;
    } catch(Exception e) {
	// division-by-zero exception
	assert e.code == 0;
    }
}
