swen430as1/tests/invalid/trycatch/TryCatch_Invalid_07.while
void f(int x) {
    try {
        x = x + 1;
    } catch(int y) {
        bool z = y;
    } 
}